--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="button_stop">Stop</string>
     <string name="button_view">View</string>
     <string name="button_clear">Clear</string>
+    <string name="minCellAndColValue">5</string>
 </resources>
