--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,6 @@
     <string name="button_view">Построить</string>
     <string name="button_clear">Очистить</string>
     <string name="minCellAndColValue">5</string>
-    <string name="cell_text_view">линии</string>
-    <string name="col_text_view">колонки</string>
+    <string name="text_view">x</string>
     <string name="chess_board_text_view">шахматная доска</string>
 </resources>
